<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txtPeso"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/txtPeso"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMC"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/txtTalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/txtTalla"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtTalla"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="21dp"
        android:hint="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="128dp"
        android:layout_height="27dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="148dp"
        android:text="@string/txtResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso"
        tools:text="@string/txtResultado" />

    <TextView
        android:id="@+id/txtRecomendacion"
        android:layout_width="285dp"
        android:layout_height="156dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="51dp"
        android:text="@string/txtRecomendacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado"
        tools:text="@string/txtRecomendacion" />

    <TextView
        android:id="@+id/txtimcn"
        android:layout_width="102dp"
        android:layout_height="62dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="164dp"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

</androidx.constraintlayout.widget.ConstraintLayout>